WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218599
Store WeakPtr<Frame> instead of Frame*
https://bugs.webkit.org/show_bug.cgi?id=218599
Summary
Store WeakPtr<Frame> instead of Frame*
Alex Christensen
Reported
2020-11-04 20:31:00 PST
Store WeakPtr<Frame> instead of Frame*
Attachments
Patch
(43.87 KB, patch)
2020-11-04 20:31 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(44.54 KB, patch)
2020-11-04 21:03 PST
,
Alex Christensen
youennf
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-11-04 20:31:55 PST
Created
attachment 413244
[details]
Patch
Alex Christensen
Comment 2
2020-11-04 21:03:53 PST
Created
attachment 413247
[details]
Patch
EWS Watchlist
Comment 3
2020-11-04 21:05:03 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
youenn fablet
Comment 4
2020-11-05 08:11:29 PST
Comment on
attachment 413247
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413247&action=review
> Source/WebCore/bindings/js/WindowProxy.h:53 > + WEBCORE_EXPORT AbstractFrame* frame() const;
Why not keeping it inline?
Alex Christensen
Comment 5
2020-11-05 08:34:23 PST
Comment on
attachment 413247
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=413247&action=review
>> Source/WebCore/bindings/js/WindowProxy.h:53 >> + WEBCORE_EXPORT AbstractFrame* frame() const; > > Why not keeping it inline?
That would require including AbstractFrame.h to build successfully.
EWS
Comment 6
2020-11-05 08:46:34 PST
Tools/Scripts/svn-apply failed to apply
attachment 413247
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Alex Christensen
Comment 7
2020-11-05 08:55:03 PST
http://trac.webkit.org/r269435
Radar WebKit Bug Importer
Comment 8
2020-11-05 08:56:20 PST
<
rdar://problem/71079886
>
Truitt Savell
Comment 9
2020-11-05 09:15:12 PST
It looks like the changes in
https://trac.webkit.org/changeset/269435/webkit
broke Mac builds builds:
https://build.webkit.org/builders/Apple-BigSur-Release-Build/builds/2839
./loader/FrameLoader.cpp:389:12: error: no viable conversion from returned value of type 'WeakPtr<WebCore::Frame>' to function return type 'WebCore::Frame *' ./loader/FrameLoader.cpp:394:12: error: no viable conversion from returned value of type 'const WeakPtr<WebCore::Frame>' to function return type 'const WebCore::Frame *'
Alex Christensen
Comment 10
2020-11-05 09:20:52 PST
https://trac.webkit.org/changeset/269439/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug