Fix build after r269435 https://bugs.webkit.org/show_bug.cgi?id=218599

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::opener):
(WebCore::FrameLoader::opener const):



Canonical link: https://commits.webkit.org/231268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269439 268f45cc-cd09-0410-ab3c-d52691b4dbfc